<resources>
    <string name="app_name" translatable="false">CartHub</string>

    <!--    Main Activity-->
    <string name="main_login">Log In</string>
    <string name="main_register">Register</string>

    <!--  Authentication Activities  -->
    <string name="auth_username">Username</string>
    <string name="auth_password">Password</string>
    <string name="auth_email">Email</string>
    <string name="auth_phonenumber">Phone Number</string>
    <string name="auth_address">Address</string>
    <string name="auth_picture">Profile Picture</string>
    <string name="auth_role">Account Role</string>

    <string name="auth_username_placeholder">username</string>
    <string name="auth_password_placeholder" translatable="false">••••••••</string>
    <string name="auth_email_placeholder" translatable="false">email@email.com</string>
    <string name="auth_phonenumber_placeholder" translatable="false">0812345678910</string>
    <string name="auth_address_placeholder">Address</string>

    <string name="auth_username_error_length">Username length must be 4 – 20 characters!</string>
    <string name="auth_username_error_unique">Username already used!</string>
    <string name="auth_username_error_regex">Username must be alphabets and numerics only!</string>
    <string name="auth_password_error_length">Password length must be 8 – 50 characters!</string>
    <string name="auth_password_error_regex">Password must be alphabets and numerics only!</string>
    <string name="auth_email_error_regex">Email is invalid!</string>
    <string name="auth_phone_error_start">Phone number starts with 0</string>
    <string name="auth_phone_error_length">Phone number only have 10 – 13 numbers!</string>
    <string name="auth_credential_error">Credential is invalid!</string>

    <string name="login_submit">Log In</string>
    <string name="register_submit">Register</string>

    <!--  Menu  -->
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_history">History</string>
    <string name="menu_merchant">Merchant Panel</string>
    <string name="menu_admin">Admin Panel</string>

    <!--  Home Fragment  -->
    <string name="home_category">Categories</string>
    <string name="home_top">Top Rated Items</string>
    <string name="home_top_merchant">Top Owned Rated Items</string>

    <!--  Cart Fragment  -->
    <string name="cart_checkout">Check Out</string>

    <!--  Profile Fragment  -->
    <string name="profile_edit">Edit Profile</string>
    <string name="profile_logout">Log Out</string>

    <!--  Edit Profile Fragment  -->
    <string name="auth_edit_confirm">Password doesn\'t match with current password!</string>
    <string name="auth_edit_request">Request Merchant Role</string>
    <string name="auth_edit_accept">Accept Request Merchant Role</string>
    <string name="auth_edit_cancel">Cancel Request Merchant Role</string>
    <string name="auth_edit_delete">Delete this account</string>

    <!--  TODO Make it publicly use (Auth & Item)  -->
    <string name="auth_edit_save">Save changes</string>

    <!--  History Fragment  -->
    <string name="history_item">Item</string>
    <string name="history_status">Status</string>
    <string name="history_item_header">Item</string>
    <string name="history_price_header">Price</string>
    <string name="history_status_header">Status</string>

    <!--  History Detail Fragment  -->
    <string name="history_detail_title">History Detail</string>
    <string name="history_detail_item">Transaction Detail</string>
    <string name="history_detail_transaction_id">Transaction ID</string>
    <string name="history_detail_item_price">Item Price</string>
    <string name="history_detail_transaction_quantity">Quantity</string>
    <string name="history_detail_transaction_total">Total Price</string>
    <string name="history_detail_transaction_status">Transaction Status</string>

    <string name="history_detail_user">User Detail</string>
    <string name="history_detail_user_username">Username</string>
    <string name="history_detail_user_email">Email</string>
    <string name="history_detail_user_phone">Phone Number</string>
    <string name="history_detail_user_address">Address</string>

    <!--  Admin Fragment  -->
    <string name="admin_stat">Application Data Count</string>
    <string name="admin_menu">Admin Menu</string>

    <!--  Admin User Fragment  -->
    <string name="admin_user_title">Admin User Data</string>

    <!--  Admin Request Fragment  -->
    <string name="admin_request_title">Admin User Request Data</string>

    <!--  Admin Item Fragment  -->
    <string name="admin_item_title">Admin Item Data</string>

    <!--  Merchant Fragment  -->
    <string name="merchant_stat">Merchant Data Count</string>
    <string name="merchant_menu">Merchant Menu</string>

    <!--  Merchant Item Fragment  -->
    <string name="merchant_item_title">Merchant Item Data</string>

    <!--  Merchant Pending Fragment  -->
    <string name="merchant_pending_title">Merchant Pending Transactions</string>

    <!--  Merchant On Progress Fragment  -->
    <string name="merchant_onprogress_title">Merchant On Progress Transactions</string>

    <!--  Merchant Completed Fragment  -->
    <string name="merchant_completed_title">Merchant Completed Transactions</string>

    <!--  Item Fragment  -->
    <string name="item_image">Item Image</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_stock">Item Stock</string>
    <string name="item_rating">Item Rating</string>
    <string name="item_merchant">Item Merchant</string>
    <string name="item_category">Item Category</string>
    <string name="item_description">Item Description</string>
    <string name="item_address">Item Store Address</string>
    <string name="item_delete">Delete Item</string>
    <string name="item_edit">Edit Item</string>

    <string name="item_name_error">Item name only contains alphabeth, numbers, and spaces!</string>
    <string name="item_price_error">Price cannot be less than Rp 100</string>
    <string name="item_stock_error">Stock cannot be negative!</string>
    <string name="item_category_error">Please select the category!</string>

    <!--    Item Activity-->
    <string name="item_add">Add to Cart</string>

    <!--  Item Fragment  -->
    <string name="item_fragment_delete">Delete Item</string>
    <string name="item_fragment_edit">Edit Item</string>

    <!--    Checkout Activity-->
    <string name="checkout_title">Checkout</string>
    <string name="checkout_total">Grand Total</string>
    <string name="checkout_pay">Pay</string>

    <string name="no_data">No data available!</string>
    <string name="no_input">Please fill this field!</string>
</resources>