<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navCart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/menu_cart" />

    <item
        android:id="@+id/navHistory"
        android:icon="@drawable/baseline_article_24"
        android:title="@string/menu_history" />

    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/menu_profile" />

    <item
        android:id="@+id/navRole"
        android:icon="@drawable/baseline_business_24"
        android:title="@string/menu_merchant" />
</menu>