<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/registerSubmitBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/register_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/registerContainerLL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/registerSubmitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/registerUsernameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_username" />

        <EditText
            android:id="@+id/registerUsernameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/auth_username_placeholder"
            android:inputType="text" />

        <TextView
            android:id="@+id/registerUsernameErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/registerPasswordTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_password" />

        <EditText
            android:id="@+id/registerPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/auth_password_placeholder"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/registerPasswordErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/registerEmailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_email" />

        <EditText
            android:id="@+id/registerEmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/auth_email_placeholder"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/registerEmailErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/registerPhoneTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_phonenumber" />

        <EditText
            android:id="@+id/registerPhoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/auth_phonenumber_placeholder"
            android:inputType="phone" />

        <TextView
            android:id="@+id/registerPhoneErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/registerAddressTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_address" />

        <EditText
            android:id="@+id/registerAddressET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/auth_address_placeholder"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/registerAddressErrorTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>