<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment">

    <TextView
        android:id="@+id/profileTitleTV"
        style="@style/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toTopOf="@id/profileButtonsLL"
        app:layout_constraintTop_toBottomOf="@id/profileTitleTV">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profilePictureTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/inter"
                android:text="@string/auth_picture"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profilePictureCV"
                style="@style/avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:elevation="12dp"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/profilePictureIV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/profileUsernameTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/auth_username" />

            <TextView
                android:id="@+id/profileUsernameShowTV"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileEmailTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/auth_email" />

            <TextView
                android:id="@+id/profileEmailShowTV"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profilePhoneTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/auth_phonenumber" />

            <TextView
                android:id="@+id/profilePhoneShowTV"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileAddressTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/auth_address" />

            <TextView
                android:id="@+id/profileAddressShowTV"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileRoleTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/auth_role" />

            <TextView
                android:id="@+id/profileRoleShowTV"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/profileButtonsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/profileEditBtn"
            style="@style/btnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/profile_edit" />

        <Button
            android:id="@+id/profileLogoutBtn"
            style="@style/btnPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/profile_logout" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>