<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.HistoryFragment">

    <TextView
        android:id="@+id/historyTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/menu_history"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/historyItemTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_bold"
            android:padding="4dp"
            android:text="@string/history_item_header"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/historyPriceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/inter_bold"
            android:paddingHorizontal="4dp"
            android:paddingVertical="4dp"
            android:text="@string/history_price_header"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/historyStatusTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/inter_bold"
            android:paddingHorizontal="4dp"
            android:paddingVertical="4dp"
            android:text="@string/history_status_header"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyDataRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>