<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ProfileEditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_editTitleTV"
                style="@style/h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/profile_edit"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_editProfileTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/auth_picture" />

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:elevation="12dp"
                app:cardCornerRadius="100dp" >

                <ImageView
                    android:id="@+id/profile_editProfileIV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/profile_editProfileErrorTV"
                style="@style/textError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_editUsernameTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/auth_username" />

            <EditText
                android:id="@+id/profile_editUsernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/profile_editUsernameErrorTV"
                style="@style/textError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_editPasswordTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/auth_password" />

            <EditText
                android:id="@+id/profile_editPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/profile_editPasswordErrorTV"
                style="@style/textError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_editEmailTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/auth_email" />

            <EditText
                android:id="@+id/profile_editEmailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/profile_editEmailErrorTV"
                style="@style/textError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_editPhoneTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/auth_phonenumber" />

            <EditText
                android:id="@+id/profile_editPhoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/profile_editPhoneErrorTV"
                style="@style/textError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_editAddressTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="@string/auth_address" />

            <EditText
                android:id="@+id/profile_editAddressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/profile_editAddressErrorTV"
                style="@style/textError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_editConfirmTV"
                style="@style/h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="Old Password" />

            <EditText
                android:id="@+id/profile_editConfirmET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/profile_editConfirmErrorTV"
                style="@style/textError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/profile_editRequestBtn"
                    style="@style/btnPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/auth_edit_request" />

                <Button
                    android:id="@+id/profile_editAcceptBtn"
                    style="@style/btnSuccess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/success"
                    android:text="@string/auth_edit_accept" />

                <Button
                    android:id="@+id/profile_editCancelBtn"
                    style="@style/btnDanger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/danger"
                    android:text="@string/auth_edit_cancel" />

                <Button
                    android:id="@+id/profile_editDeleteBtn"
                    style="@style/btnDanger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/danger"
                    android:text="@string/auth_edit_delete" />

                <Button
                    android:id="@+id/profile_editSaveBtn"
                    style="@style/btnPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/auth_edit_save" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>