<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CartFragment">

    <TextView
        android:id="@+id/cartTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_cart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/cartCheckoutBtn"
        app:layout_constraintTop_toBottomOf="@id/cartTitleTV">

        <TextView
            android:id="@+id/cartEmptyTV"
            style="@style/textThin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_data" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItemRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <Button
        android:id="@+id/cartCheckoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart_checkout"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>